--- a/config/locales/client.ca.yml
+++ b/config/locales/client.ca.yml
@@ -2880,6 +2880,7 @@ ca:
           save: "Desa"
           delete: "Suprimeix"
           links:
+            reset: "Restableix el valor predeterminat"
             icon:
               label: "Icona"
             name:
