--- a/config/locales/client.el.yml
+++ b/config/locales/client.el.yml
@@ -3300,6 +3300,7 @@ el:
           save: "Αποθήκευση"
           delete: "Σβήσιμο"
           links:
+            reset: "Επαναφορά στο προεπιλεγμένο"
             icon:
               label: "Σύμβολο"
             name:
@@ -3339,7 +3340,7 @@ el:
           configure_defaults: "Ρύθμιση προεπιλογών"
         community:
           header_link_text: "Κοινότητα"
-          header_action_title: "Δημιουργήστε ένα θέμα"
+          header_action_create_topic_title: "Δημιουργήστε ένα θέμα"
           links:
             about:
               content: "Σχετικά"
