--- a/config/locales/client.pl_PL.yml
+++ b/config/locales/client.pl_PL.yml
@@ -409,6 +409,7 @@ pl_PL:
       new_topic: "Nowy szkic tematu"
       new_private_message: "Nowy szkic wiadomości osobistej"
       abandon:
+        confirm: "Masz już wersję roboczą w toku. Co chcesz z nią zrobić?"
         yes_value: "Odrzuć"
         no_value: "Wznów edycję"
     topic_count_categories:
@@ -605,21 +606,41 @@ pl_PL:
       scores:
         about: "Wynik jest obliczany na podstawie poziomu zaufania raportującego, akceptacji poprzednich flag i priorytetu raportowanego postu."
         score: "Wynik"
+        date: "Data zgłoszenia"
         type: "Powód"
         status: "Status"
         submitted_by: "Zgłoszony przez"
+        reviewed_by: "Sprawdzony przez"
+        reviewed_timestamp: "Data sprawdzenia"
       statuses:
         pending:
           title: "Oczekujące"
         approved:
           title: "Zaakceptowany"
+        approved_flag:
+          title: "Flaga zatwierdzona"
+        approved_user:
+          title: "Użytkownik zatwierdzony"
+        approved_post:
+          title: "Post zatwierdzony"
         rejected:
           title: "Odrzucony"
+        rejected_flag:
+          title: "Flaga odrzucona"
+        rejected_user:
+          title: "Użytkownik odrzucony"
+        rejected_post:
+          title: "Post odrzucony"
+        ignored:
+          title: "Flaga zignorowana"
+        deleted:
+          title: "Temat lub post usunięty"
         reviewed:
           title: "Wszystkie sprawdzone"
         all:
           title: "Wszystko"
       context_question:
+        is_this_post: "Czy ten post %{reviewable_human_score_types}?"
         delimiter: "lub"
         something_else_wrong: "Czy coś jest nie tak z tym postem?"
       types:
@@ -3000,6 +3021,7 @@ pl_PL:
       browse_all_tags_or_latest: "<a href='%{basePath}/tags'>Przeglądaj wszystkie tagi</a> lub <a href='%{basePath}/latest'>zobacz najnowsze tematy</a>."
       suggest_create_topic: Gotowy na <a href>rozpoczęcie nowej rozmowy?</a>
       jump_reply: "Przejdź do pierwotnej lokalizacji posta"
+      jump_reply_aria: "Przejdź do postu @%{username} w jego oryginalnej lokalizacji"
       deleted: "Temat został usunięty"
       slow_mode_update:
         title: "Tryb powolny"
@@ -3287,6 +3309,7 @@ pl_PL:
           few: "Wybierz temat, do którego chcesz przenieść wybrane <b>%{count}</b> wpisy."
           many: "Wybierz temat, do którego chcesz przenieść <b>%{count}</b> wybranych wpisów."
           other: "Wybierz temat, do którego chcesz przenieść <b>%{count}</b> wybranych wpisów."
+        chronological_order: "zachować porządek chronologiczny po połączeniu"
       move_to_new_message:
         title: "Przejdź do nowej wiadomości"
         action: "przejdź do nowej wiadomości"
@@ -4430,6 +4453,7 @@ pl_PL:
           links:
             add: "Dodaj kolejny link"
             delete: "Usuń link"
+            reset: "Przywróć ustawienia domyślne"
             icon:
               label: "Ikona"
               validation:
@@ -4486,7 +4510,7 @@ pl_PL:
           configure_defaults: "Skonfiguruj ustawienia domyślne"
         community:
           header_link_text: "Społeczność"
-          header_action_title: "Utwórz temat"
+          header_action_create_topic_title: "Utwórz temat"
           links:
             about:
               content: "O stronie"
@@ -4530,6 +4554,8 @@ pl_PL:
     until: "Aż do:"
     char_counter:
       exceeded: "Przekroczono maksymalną dozwoloną liczbę znaków."
+    form_template_chooser:
+      select_template: "Wybierz szablony formularzy"
   admin_js:
     type_to_filter: "pisz, aby filtrować…"
     admin:
@@ -4799,6 +4825,8 @@ pl_PL:
               update: Zaktualizuj status użytkownika.
             email:
               receive_emails: Połącz ten zakres z odbiorcą poczty w celu przetwarzania przychodzących wiadomości e-mail.
+            invites:
+              create: Wysyłaj zaproszenia e-mailem lub generuj linki do zaproszeń.
             badges:
               create: Utwórz nową odznakę.
               show: Uzyskaj informacje o odznace.
@@ -5482,6 +5510,9 @@ pl_PL:
             delete_group: "usuń grupę"
             watched_word_create: "dodaj obserwowane słowo"
             watched_word_destroy: "usuń obserwowane słowo"
+            create_public_sidebar_section: "utwórz publiczną sekcję paska bocznego"
+            update_public_sidebar_section: "aktualizuj publiczną sekcję paska bocznego"
+            destroy_public_sidebar_section: "zniszcz publiczną sekcję paska bocznego"
         screened_emails:
           title: "Ekranowane emaile"
           description: "Kiedy ktoś próbuje założyć nowe konto, jego adres email zostaje sprawdzony i rejestracja zostaje zablokowana, lub inna akcja jest podejmowana."
@@ -5548,7 +5579,12 @@ pl_PL:
           link: "Odnośnik"
         action_descriptions:
           block: "Komunikat o błędzie zostanie wyświetlony podczas próby utworzenia posta zawierającego te słowa."
+          censor: "Zezwalaj na posty zawierające te słowa, ale zastąp je znakami ukrywającymi ocenzurowane słowa."
+          require_approval: "Wymagaj zatwierdzenia przez personel postów zawierających te słowa, zanim będą one widoczne dla innych."
+          flag: "Zezwalaj na posty zawierające te słowa, ale oflaguj je jako nieodpowiednie do sprawdzenia przez moderatorów."
           replace: "Zastąp słowa w postach innymi słowami."
+          tag: "Automatycznie otaguj tematy, jeśli pierwszy post zawiera konkretne słowo."
+          silence: "Wycisz nowe konta, jeśli ich pierwszy post zawiera którekolwiek z tych słów. Post zostanie automatycznie ukryty, dopóki personel go nie zatwierdzi."
           link: "Zastąp słowa w postach linkami."
         form:
           label: "Zawiera słowo lub frazę"
@@ -5580,6 +5616,7 @@ pl_PL:
         list_table:
           headings:
             name: "Nazwa"
+            active_categories: "Aktywne kategorie"
             actions: "Akcje"
           actions:
             view: "Zobacz szablon"
@@ -5589,6 +5626,7 @@ pl_PL:
           close: "Zamknij"
           edit: "Edytuj"
           delete: "Usuń"
+          toggle_preview: "Przełącz podgląd"
         new_template_form:
           submit: "Zapisz"
           cancel: "Anuluj"
@@ -5609,6 +5647,8 @@ pl_PL:
           upload: "Prześlij plik"
           multiselect: "Wielokrotny wybór"
         validations_modal:
+          button_title: "Walidacje"
+          modal_title: "Opcje walidacji"
           table_headers:
             key: "Klucz"
             type: "Typ"
@@ -5616,10 +5656,31 @@ pl_PL:
           validations:
             required:
               key: "wymagane"
+              description: "Wymaga wypełnienia pola w celu wysłania formularza."
             minimum:
               key: "minimum"
+              description: "W polach tekstowych określa minimalną dozwoloną liczbę znaków."
             maximum:
               key: "maksimum"
+              description: "W polach tekstowych określa maksymalną dozwoloną liczbę znaków. W listach rozwijanych wielokrotnego wyboru określa maksymalną liczbę opcji, które można wybrać."
+            pattern:
+              type: "ciąg regex"
+              description: "W polach tekstowych wyrażenie regularne określające dozwolone dane wejściowe."
+        preview_modal:
+          title: "Podgląd szablonu"
+        field_placeholders:
+          validations: "wprowadź walidacje tutaj"
+          label: "Wprowadź etykietę tutaj"
+          none_label: "Wybierz element"
+          choices:
+            first: "Opcja 1"
+            second: "Opcja 2"
+            third: "Opcja 3"
+        edit_category:
+          toggle_freeform: "szablon formularza wyłączony"
+          toggle_form_template: "szablon formularza włączony"
+          select_template: "Wybierz szablony formularzy"
+          select_template_help: "Dodaj/edytuj szablony formularzy"
       impersonate:
         title: "Podszywaj się"
         help: "Użyj tego narzędzia, aby podszywać się pod konto użytkownika do celów debugowania. Będziesz musiał się wylogować po zakończeniu."
