--- a/config/locales/client.ur.yml
+++ b/config/locales/client.ur.yml
@@ -3593,6 +3593,7 @@ ur:
           save: "محفوظ کریں"
           delete: "مٹائیں"
           links:
+            reset: "دوبارہ پہلے جیسا کر دیں"
             icon:
               label: "آئیکن"
             name:
