--- a/plugins/chat/config/locales/client.sv.yml
+++ b/plugins/chat/config/locales/client.sv.yml
@@ -526,6 +526,7 @@ sv:
         original_message:
           started_by: "Startad av"
         settings: "Webbplatsinställningar"
+        last_reply: "senaste svar"
       threads:
         open: "Öppna tråd"
         list: "Pågående diskussioner"
