--- a/plugins/chat/config/locales/client.de.yml
+++ b/plugins/chat/config/locales/client.de.yml
@@ -251,6 +251,9 @@ de:
       select: "Auswählen"
       return_to_list: "Zurück zur Kanalliste"
       return_to_threads_list: "Zurück zu den laufenden Diskussionen"
+      unread_threads_count:
+        one: "Du hast %{count} ungelesene Diskussion"
+        other: "Du hast %{count} ungelesene Diskussionen"
       scroll_to_bottom: "Nach unten scrollen"
       scroll_to_new_messages: "Neue Nachrichten anzeigen"
       sound:
@@ -526,6 +529,7 @@ de:
         original_message:
           started_by: "Gestartet von"
         settings: "Einstellungen"
+        last_reply: "letzte Antw."
       threads:
         open: "Thread öffnen"
         list: "Laufende Diskussionen"
