--- a/plugins/chat/config/locales/client.fi.yml
+++ b/plugins/chat/config/locales/client.fi.yml
@@ -160,6 +160,9 @@ fi:
       select: "Valitse"
       return_to_list: "Palaa kanavaluetteloon"
       return_to_threads_list: "Palaa aktiivisiin keskusteluihin"
+      unread_threads_count:
+        one: "Sinulla on %{count} lukematon keskustelu"
+        other: "Sinulla on %{count} lukematonta keskustelua"
       scroll_to_bottom: "Vieritä alas"
       scroll_to_new_messages: "Katso uudet viestit"
       sound:
@@ -383,6 +386,7 @@ fi:
         original_message:
           started_by: "Aloittanut"
         settings: "Asetukset"
+        last_reply: "viimeisin vastaus"
       threads:
         open: "Avaa ketju"
         list: "Käynnissä olevat keskustelut"
