--- a/plugins/chat/config/locales/client.he.yml
+++ b/plugins/chat/config/locales/client.he.yml
@@ -574,6 +574,7 @@ he:
         original_message:
           started_by: "נפתח ע״י"
         settings: "הגדרות"
+        last_reply: "תגובה אחרונה"
       threads:
         open: "פתיחת שרשור"
         list: "דיונים שמתקיימים כרגע"
