--- a/plugins/chat/config/locales/server.pl_PL.yml
+++ b/plugins/chat/config/locales/server.pl_PL.yml
@@ -10,27 +10,89 @@ pl_PL:
     chat_allowed_groups: "Użytkownicy w tych grupach mogą rozmawiać. Pamiętaj, że personel zawsze ma dostęp do czatu."
     chat_channel_retention_days: "Wiadomości czatu w zwykłych kanałach będą przechowywane przez tyle dni. Ustaw '0', aby zachować wiadomości na zawsze."
     chat_dm_retention_days: "Wiadomości czatu w osobistych kanałach czatu będą przechowywane przez tyle dni. Ustaw '0', aby zachować wiadomości na zawsze."
+    chat_minimum_message_length: "Minimalna liczba znaków wiadomości na czacie."
+    chat_allow_uploads: "Zezwalaj na przesyłanie plików w publicznych kanałach czatu i kanałach wiadomości bezpośrednich."
+    chat_archive_destination_topic_status: "Status, jaki powinien mieć temat docelowy po zakończeniu archiwizacji kanału. Dotyczy to tylko sytuacji, gdy temat docelowy jest nowym tematem, a nie istniejącym."
+    default_emoji_reactions: "Domyślne reakcje emoji dla wiadomości czatu. Dodaj do 5 emotikonów, aby szybko reagować."
+    direct_message_enabled_groups: "Zezwól użytkownikom w tych grupach na tworzenie czatów osobistych między użytkownikami. Uwaga: personel zawsze może tworzyć czaty osobiste, a użytkownicy będą mogli odpowiadać na czaty osobiste inicjowane przez użytkowników, którzy mają uprawnienia do ich tworzenia."
+    chat_message_flag_allowed_groups: "Użytkownicy w tych grupach mogą oflagować wiadomości na czacie."
+    chat_max_direct_message_users: "Użytkownicy nie mogą dodać więcej niż ta liczba innych użytkowników podczas tworzenia nowej wiadomości bezpośredniej. Ustaw na 0, aby zezwolić na wysyłanie wiadomości tylko do siebie. Personel jest zwolniony z tego ustawienia."
+    chat_allow_archiving_channels: "Zezwól personelowi na archiwizowanie wiadomości w temacie podczas zamykania kanału."
+    errors:
+      chat_default_channel: "Domyślny kanał czatu musi być kanałem publicznym."
+      direct_message_enabled_groups_invalid: "Musisz określić co najmniej jedną grupę dla tego ustawienia. Jeśli nie chcesz, aby ktokolwiek poza personelem wysyłał bezpośrednie wiadomości, wybierz grupę pracowników."
+      chat_upload_not_allowed_secure_uploads: "Przesyłanie plików na czacie nie jest dozwolone, gdy włączone jest ustawienie bezpiecznego przesyłania."
+  system_messages:
+    chat_channel_archive_complete:
+      title: "Archiwizacja kanału czatu ukończona"
+      subject_template: "Pomyślnie ukończono archiwizację kanału czatu"
+    chat_channel_archive_failed:
+      title: "Archiwizacja kanału czatu nie powiodła się"
+      subject_template: "Archiwizacja kanału czatu nie powiodła się"
+    chat_channel_archive_failed_no_topic:
+      title: "Archiwizacja kanału czatu nie powiodła się"
+      subject_template: "Archiwizacja kanału czatu nie powiodła się"
+      text_body_template: |
+        Archiwizacja kanału czatu %{channel_hashtag_or_name} nie powiodła się. Nie zarchiwizowano żadnych wiadomości. Temat nie został pomyślnie utworzony z następujących powodów:
+
+          %{topic_validation_errors}
+
+        Odwiedź kanał pod adresem %{channel_url}, aby spróbować ponownie.
   chat:
     deleted_chat_username: usunięte
     errors:
       channel_exists_for_category: "Istnieje już kanał dla tej kategorii i nazwy"
+      channel_new_message_disallowed:
+        archived: "Kanał jest zarchiwizowany, nie można wysyłać nowych wiadomości"
+        closed: "Kanał jest zamknięty, nie można wysyłać nowych wiadomości"
+        read_only: "Kanał jest tylko do odczytu, nie można wysyłać nowych wiadomości"
+      channel_modify_message_disallowed:
+        archived: "Kanał jest zarchiwizowany, nie można edytować ani usuwać żadnych wiadomości"
+        closed: "Kanał jest zamknięty, nie można edytować ani usuwać żadnych wiadomości"
+        read_only: "Kanał jest tylko do odczytu, nie można edytować ani usuwać żadnych wiadomości"
       user_cannot_send_message: "W tej chwili nie możesz wysyłać wiadomości."
       rate_limit_exceeded: "Przekroczono limit wiadomości na czacie, które można wysłać w ciągu 30 sekund"
+      auto_silence_from_flags: "Wiadomość na czacie oflagowana z wynikiem wystarczającym do wyciszenia użytkownika."
+      channel_cannot_be_archived: "Kanał nie może być w tej chwili zarchiwizowany, musi być zamknięty lub otwarty do archiwizacji."
       duplicate_message: "Zbyt niedawno opublikowałeś identyczną wiadomość."
       delete_channel_failed: "Nie udało się usunąć kanału, spróbuj ponownie."
+      minimum_length_not_met:
+        one: "Wiadomość jest za krótka, musi mieć co najmniej %{count} znak."
+        few: "Wiadomość jest za krótka, musi mieć co najmniej %{count} znaki."
+        many: "Wiadomość jest za krótka, musi mieć co najmniej %{count} znaków."
+        other: "Wiadomość jest za krótka, musi mieć co najmniej %{count} znaków."
+      message_too_long:
+        one: "Wiadomość jest za długa, wiadomości mogą mieć maksymalnie %{count} znaków."
+        few: "Wiadomość jest za długa, wiadomości mogą mieć maksymalnie %{count} znaków."
+        many: "Wiadomość jest za długa, wiadomości mogą mieć maksymalnie %{count} znaków."
+        other: "Wiadomość jest za długa, wiadomości mogą mieć maksymalnie %{count} znaków."
       draft_too_long: "Wersja robocza jest za długa."
       max_reactions_limit_reached: "Nowe reakcje nie są dozwolone w tej wiadomości."
       message_move_invalid_channel: "Kanał źródłowy i docelowy muszą być kanałami publicznymi."
+      message_move_no_messages_found: "Nie znaleziono wiadomości z podanymi identyfikatorami wiadomości."
+      cant_update_direct_message_channel: "Właściwości kanału wiadomości bezpośrednich, takie jak nazwa i opis, nie mogą być aktualizowane."
       not_accepting_dms: "Przepraszamy, ale użytkownik %{username} nie akceptuje w tej chwili wiadomości "
+      actor_disallowed_dms: "Zdecydowałeś się uniemożliwić użytkownikom wysyłanie Ci wiadomości prywatnych i bezpośrednich, więc nie możesz tworzyć nowych wiadomości bezpośrednich."
+      actor_preventing_target_user_from_dm: "Zdecydowałeś się uniemożliwić %{username} wysyłanie Ci prywatnych i bezpośrednich wiadomości, więc nie możesz tworzyć nowych bezpośrednich wiadomości do niego."
       user_cannot_send_direct_messages: "Przepraszamy, nie możesz wysyłać bezpośrednich wiadomości."
+      over_chat_max_direct_message_users_allow_self: "Możesz utworzyć bezpośrednią wiadomość tylko z samym sobą."
+      over_chat_max_direct_message_users:
+        one: "Nie możesz utworzyć bezpośredniej wiadomości z więcej niż %{count} innym użytkownikiem."
+        few: "Nie możesz utworzyć bezpośredniej wiadomości z więcej niż %{count} innymi użytkownikami."
+        many: "Nie możesz utworzyć bezpośredniej wiadomości z więcej niż %{count} innymi użytkownikami."
+        other: "Nie możesz utworzyć bezpośredniej wiadomości z więcej niż %{count} innymi użytkownikami."
+      original_message_not_found: "Nie można znaleźć przodka wiadomości, na którą odpowiadasz, lub został on usunięty."
     reviewables:
+      message_already_handled: "Dziękujemy, ale sprawdziliśmy już tę wiadomość i ustaliliśmy, że nie trzeba jej ponownie oznaczać."
       actions:
         agree:
           title: "Zgadzam się..."
         agree_and_keep_message:
           title: "Zachowaj wiadomość"
+          description: "Zgódź się z flagą i pozostaw wiadomość bez zmian."
         agree_and_keep_deleted:
           title: "Zachowaj wiadomość usuniętą"
+          description: "Zgódź się z flagą i pozostaw wiadomość usuniętą."
         agree_and_suspend:
           title: "Zawieś użytkownika"
           description: "Zgódź się z flagą i zawieś konto użytkownika."
@@ -39,8 +101,10 @@ pl_PL:
           description: "Zgódź się z flagą i wycisz użytkownika."
         agree_and_restore:
           title: "Przywróć wiadomość"
+          description: "Przywróć wiadomość, aby użytkownicy mogli ją zobaczyć."
         agree_and_delete:
           title: "Usuń wiadomość"
+          description: "Usuń wiadomość, aby użytkownicy nie mogli jej zobaczyć."
         delete_and_agree:
           title: "Usuń wiadomość"
         disagree_and_restore:
